# DNS-server

./: .gitignore  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt  README.md  build_req.c  build_req.h  client_options.c  client_options.h  connect.c  connect.h  main.c  stress_test.c
client/src/: connect.c  connect.h  main.c
input/: basic.cnf  basic.json
input/zones/: abc.zone  abcd.zone
profiler/: main.c
src/: main.c
src/client/: build_req.c  client_options.c  client_options.h  connect.c  connect.h  main.c  stress_test.c  stress_test.h
src/config/: class_type.c  class_type.h  record.c  record.h  record_array.c  record_array.h  record_type.c  record_type.h  record_values.c  record_values.h  server_config.c  server_config.h  zone.c  zone.h  zone_array.c  zone_array.h
src/messages/: answer.c  answer.h  message.c  message.h  opcode.c  opcode.h  qr.c  qr.h  question.c  question.h  question_array.c  question_array.h  rcode.c  rcode.h  request.c  response.c  response.h
src/messages/request/: request.c  request.h
src/messages/response/: resp_answer.c  resp_answer.h  resp_headers.c  resp_headers.h  resp_question.c  resp_question.h  response.c  response.h
src/parser/: input.c  input.h  input_state.h  options.c  options.h  parse_request.c  parse_request.h  parse_zone.c  parse_zone.h  validate_request.c  validate_request.h
src/parsing/: input.c  input.c.save  parse_request.c  parse_request.h  request.c  request.h
src/profiler/: main.c
src/server/: listen.c  listen.h  protocol.h  tcp_listen.c  tcp_listen.h  udp_listen.c  udp_listen.h  wrapper.c  wrapper.h
src/utils/: base_convertions.c  base_convertions.h  bits.c  bits.h  error.c  error.h  file.c  file.h  json.c  json.h  printer.c  printer.h  string.c  string.h  utils.c  utils.h
tests/: main.sh
tests/input/conf/invalid/: invalid2.cnf  invalid3.cnf  invalid4.cnf  invalid5.cnf  invalid6.cnf  invalid7.cnf  invalid8.cnf  invalid9.cnf
tests/input/conf/valid/: valid1.cnf
tests/input/invalid/: invalid2.cnf  invalid3.cnf
tests/input/valid/: valid1.cnf  valid1.zone
tests/input/zones/invalid/: invalid1.zone  invalid2.zone  invalid3.zone  invalid4.zone  invalid5.zone
tests/src/: config.sh
